[gd_scene load_steps=10 format=3 uid="uid://cld1c4x65h2t7"]

[ext_resource type="Script" path="res://globals/game.gd" id="1_mhmjv"]
[ext_resource type="Script" path="res://modemachine/mode_machine.gd" id="2_x38xm"]
[ext_resource type="Script" path="res://modemachine/game_modes/combat_mode.gd" id="3_smw54"]
[ext_resource type="PackedScene" uid="uid://bxcxx1ioxwp48" path="res://combat/combat.tscn" id="4_53b64"]
[ext_resource type="Script" path="res://modemachine/game_modes/dungeon_mode.gd" id="5_6xvtt"]
[ext_resource type="PackedScene" uid="uid://dpwu21k1ya0ad" path="res://dungeon/dungeon.tscn" id="6_glx83"]
[ext_resource type="Script" path="res://modemachine/mode.gd" id="7_422r3"]
[ext_resource type="Script" path="res://ui/inventory/inventory_ui.gd" id="8_i80o1"]
[ext_resource type="Script" path="res://ui/actions/actions_ui.gd" id="9_d0nn4"]

[node name="Game" type="Node"]
script = ExtResource("1_mhmjv")

[node name="GameModes" type="Node" parent="." node_paths=PackedStringArray("initial_mode")]
script = ExtResource("2_x38xm")
initial_mode = NodePath("DungeonMode")

[node name="CombatMode" type="Node" parent="GameModes"]
script = ExtResource("3_smw54")
attached_scene = ExtResource("4_53b64")

[node name="DungeonMode" type="Node" parent="GameModes" node_paths=PackedStringArray("attached_node")]
script = ExtResource("5_6xvtt")
attached_scene = ExtResource("6_glx83")
attached_node = NodePath("../../Ui/Dungeon_Chat/DungeonWindow/SubViewport/Dungeon")

[node name="UiModes" type="Node" parent="." node_paths=PackedStringArray("initial_mode")]
script = ExtResource("2_x38xm")
initial_mode = NodePath("ActionsMode")

[node name="InventoryMode" type="Node" parent="UiModes" node_paths=PackedStringArray("attached_node")]
script = ExtResource("7_422r3")
attached_node = NodePath("../../Ui/InventoryUi")

[node name="ActionsMode" type="Node" parent="UiModes" node_paths=PackedStringArray("attached_node")]
script = ExtResource("7_422r3")
attached_node = NodePath("../../Ui/Dungeon_Chat")

[node name="Ui" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryUi" type="HBoxContainer" parent="Ui"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
script = ExtResource("8_i80o1")

[node name="ItemList" type="VBoxContainer" parent="Ui/InventoryUi"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemDetails" type="VBoxContainer" parent="Ui/InventoryUi"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Dungeon_Chat" type="HBoxContainer" parent="Ui"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66

[node name="DungeonWindow" type="SubViewportContainer" parent="Ui/Dungeon_Chat"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="Ui/Dungeon_Chat/DungeonWindow"]
handle_input_locally = false
size = Vector2i(241, 720)
render_target_update_mode = 4

[node name="Dungeon" parent="Ui/Dungeon_Chat/DungeonWindow/SubViewport" instance=ExtResource("6_glx83")]

[node name="ChatLog" type="RichTextLabel" parent="Ui/Dungeon_Chat"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true

[node name="Stats_Actions" type="VBoxContainer" parent="Ui"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.33

[node name="Stats" type="GridContainer" parent="Ui/Stats_Actions"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
theme_override_constants/h_separation = 70
theme_override_constants/v_separation = 10
columns = 2

[node name="Health" type="Label" parent="Ui/Stats_Actions/Stats"]
layout_mode = 2
text = "Health : 20
"

[node name="Sanity" type="Label" parent="Ui/Stats_Actions/Stats"]
layout_mode = 2
text = "Sanity: 4"

[node name="Toughness" type="Label" parent="Ui/Stats_Actions/Stats"]
layout_mode = 2
text = "Toughness: 6
"

[node name="Aether" type="Label" parent="Ui/Stats_Actions/Stats"]
layout_mode = 2
text = "Aether: 16/20"

[node name="MagicResistance" type="Label" parent="Ui/Stats_Actions/Stats"]
layout_mode = 2
text = "Magic Resist: 4"

[node name="Exhaustion" type="Label" parent="Ui/Stats_Actions/Stats"]
layout_mode = 2
text = "Exhaustion: 10"

[node name="Actions" type="GridContainer" parent="Ui/Stats_Actions"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("9_d0nn4")
